<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

     <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/searchactivity_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

         <androidx.appcompat.widget.Toolbar
             android:id="@+id/searchactivity_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.AppBarOverlay">

         </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/searchactivity_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:ems="10"
            android:inputType="text"
            android:text="your search " />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_toplow"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/searchactivity_datebeginlabel"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Begin Date"/>
                <EditText
                    android:id="@+id/searchactivity_datebegin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:hint="pick begin date"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/searchactivity_dateendlabel"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="End Date"/>
                <EditText
                    android:id="@+id/searchactivity_dateend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:hint="pick end date"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_toplow"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_arts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_toplow"
                    android:text="Arts" />
                <!-- android:onClick="onCheckboxArtsClicked" -->
                <CheckBox
                    android:id="@+id/cb_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_toplow"
                    android:text="Business" />
                <!-- android:onClick="onCheckboxBusinessClicked" -->
                <CheckBox
                    android:id="@+id/cb_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_toplow"
                    android:text="Movies" />
                <!-- android:onClick="onCheckboxEntrepreneursClicked" -->
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox android:id="@+id/cb_politics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_toplow"
                    android:text="Politics"/>
                <!-- android:onClick="onCheckboxPoliticsClicked"/> -->
                <CheckBox android:id="@+id/cb_sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_toplow"
                    android:text="Sports"/>
                <!-- android:onClick="onCheckboxSportsClicked" -->
                <CheckBox android:id="@+id/cb_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_toplow"
                    android:text="Travel"/>
                <!-- android:onClick="onCheckboxTravelClicked"-->
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/searchactivity_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="SEARCH"
            android:background="@color/colorPrimary"/>
        <Switch
            android:id="@+id/searchactivity_go_notif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:padding="8dp"
            android:text="Enable notifications (one per day)"
            tools:visibility="visible" />
    </LinearLayout>
<!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />
-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>