<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.syc.MainActivity">
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@mipmap/search_loupe"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_notifications"
        android:orderInCategory="200"
        android:title="@string/Notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="300"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="400"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
